# mateconfmm

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in  mateconfmm.spec.in
build_shared/: Makefile_gensrc.am_fragment
debian/: changelog  control  copyright  libmateconfmm-2.6-dev.install  libmateconfmm-2.6-doc.doc-base.gconfmm2.6-reference  rules  watch
docs/: Makefile.am  Makefile.in
docs/reference/: Doxyfile.in  Makefile.am  Makefile.in  README
examples/: Makefile.am  Makefile.in
examples/client/: Makefile.am  Makefile.in  main.cc  window_test.cc  window_test.h
mateconf/: Makefile.am  Makefile.in  README  mateconfmm-2.6-uninstalled.pc.in  mateconfmm-2.6.pc.in  mateconfmm.h  mateconfmmconfig.h.in
mateconf/mateconfmm/: Makefile.am  Makefile.in  callback.cc  callback.h  changeset.cc  changeset.h  client.cc  client.h  entry.cc  entry.h  init.cc  init.h  schema.cc  schema.h  setinterface.cc  setinterface.h  value.cc  value.h  value_listhelpers.h  wrap_init.cc  wrap_init.h
mateconf/mateconfmm/private/: Makefile.am  Makefile.in  changeset_p.h  client_p.h  entry_p.h  schema_p.h  value_p.h
mateconf/src/: Makefile.am  Makefile.in  Makefile_list_of_hg.am_fragment  changeset.ccg  changeset.hg  client.ccg  client.hg  entry.ccg  entry.hg  mateconf.defs  mateconf_enums.defs  mateconf_methods.defs  mateconf_signals.defs  schema.hg  value.ccg  value.hg
scripts/: Makefile.in  macros.m4
tools/: Makefile.am  Makefile.in
tools/extra_defs_gen/: Makefile.am  Makefile.in  generate_defs_mateconf.cc
tools/m4/: Makefile.am  Makefile.in  Makefile_list_of_sources.am_fragment  README  convert.m4  convert_mateconfmm.m4
