SUBDIRS		= src mateconfmm

EXTRA_DIST	= README			\
		  mateconfmmconfig.h.in mateconfmm.h	\
		  mateconfmm-2.6.pc.in mateconfmm-2.6-uninstalled.pc.in

mateconfmm_includedir	= $(includedir)/mateconfmm-2.6
mateconfmm_include_HEADERS	= mateconfmm.h

mateconfmm_configdir	= $(libdir)/mateconfmm-2.6/include
mateconfmm_config_DATA	= mateconfmmconfig.h

pkgconfigdir		= $(libdir)/pkgconfig
pkgconfig_DATA		= mateconfmm-2.6.pc
